<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.hliu.cst2335_project.PkgAutomobile.AutomobileActivity">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:id="@+id/purchaseList"></ListView>

    <Button
        android:id="@+id/addNew"
        android:layout_width="250dp"
        android:layout_height="38dp"
        android:layout_gravity="center"
        android:background="@drawable/auto_border"
        android:text="@string/add_a" />

    <Button
        android:id="@+id/everyMonthPurchased"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/everymonth_a"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/lastMonthAveragePrice"
            android:text="@string/average_a"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="$"
            android:textAlignment="center"
            android:textSize="20dp"
            android:id="@+id/lastMonthAveragePriceResult"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/lastMonthPurchased"
            android:text="@string/total_a"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="$"
            android:textAlignment="center"
            android:textSize="20dp"
            android:id="@+id/lastMonthPurchasedResult"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>




</LinearLayout>
