<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hliu.cst2335_project.PkgAutomobile.AutomobileDetail"
    android:orientation="vertical"
    android:id="@+id/viewDetail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp" >
        <TextView
            android:id="@+id/recordTime"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/recordTime_a"
            android:textSize="20dp"
            android:background="@drawable/auto_border" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recordTimeValue"
            android:textSize="20dp"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/detail">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/liters"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/liters_a"
                android:textSize="20dp"
                android:paddingLeft="8dp"
                android:background="@drawable/auto_border" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:paddingLeft="8dp"
                android:id="@+id/litersV"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/price"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/price_a"
                android:textSize="20dp"
                android:paddingLeft="8dp"
                android:background="@drawable/auto_border" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:paddingLeft="8dp"
                android:id="@+id/priceV"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/KM"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/km_a"
                android:textSize="20dp"
                android:paddingLeft="8dp"
                android:background="@drawable/auto_border" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:paddingLeft="8dp"
                android:id="@+id/kmV"/>
        </LinearLayout>
        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp">

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_a"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_a"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>
