<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/enterInfo">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/liters"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/liters_a"
            android:textSize="20dp"
            android:paddingLeft="8dp"
            android:background="@drawable/auto_border" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:paddingLeft="8dp"
            android:id="@+id/LitersInput"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/price"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/price_a"
            android:textSize="20dp"
            android:paddingLeft="8dp"
            android:background="@drawable/auto_border" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:paddingLeft="8dp"
            android:id="@+id/priceInput"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/KM"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/km_a"
            android:textSize="20dp"
            android:paddingLeft="8dp"
            android:background="@drawable/auto_border" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:paddingLeft="8dp"
            android:id="@+id/KMInput"/>
    </LinearLayout>



    </LinearLayout>

</FrameLayout>
